--- a/a10_horizon/dashboard/a10networks/a10ssl/templates/policy/action/_update.html
+++ b/a10_horizon/dashboard/a10networks/a10ssl/templates/policy/action/_update.html
@@ -7,7 +7,7 @@
 {% block form_id %}updateaction{% endblock %}
 
 {% block form_action %}
-{% url 'horizon:project:a10networks:a10scaling:updateaction' id=id %}
+{% url 'horizon:project:a10scaling:updateaction' id=id %}
 {% endblock %}
 
 {% block modal-body-right %}
