--- a/a10_horizon/dashboard/a10networks/templates/policy/alarm/_update.html
+++ b/a10_horizon/dashboard/a10networks/templates/policy/alarm/_update.html
@@ -7,7 +7,7 @@
 {% block form_id %}updatealarm{% endblock %}
 
 {% block form_action %}
-{% url 'horizon:project:a10networks:a10scaling:updatealarm' id=id %}
+{% url 'horizon:project:a10scaling:updatealarm' id=id %}
 {% endblock %}
 
 {% block modal-body-right %}
