--- a/a10_horizon/dashboard/a10networks/templates/policy/reaction/_update.html
+++ b/a10_horizon/dashboard/a10networks/templates/policy/reaction/_update.html
@@ -7,7 +7,7 @@
 {% block form_id %}updatescalingpolicy{% endblock %}
 
 {% block form_action %}
-{% url 'horizon:project:a10networks:a10scaling:updatescalingpolicy' scaling_policy_id=scaling_policy_id %}
+{% url 'horizon:project:a10scaling:updatescalingpolicy' scaling_policy_id=scaling_policy_id %}
 {% endblock %}
 
 {% block modal-body-right %}
