--- a/a10_horizon/dashboard/a10networks/templates/certificates/_updatecertificate.html
+++ b/a10_horizon/dashboard/a10networks/templates/certificates/_updatecertificate.html
@@ -3,7 +3,7 @@
 {% load url from future %}
 
 {% block form_id %}update_certificate_form{% endblock %}
-{% block form_action %}{% url 'horizon:project:a10networks:updatecertificate' certificate_id %}{% endblock %}
+{% block form_action %}{% url 'horizon:project:updatecertificate' certificate_id %}{% endblock %}
 
 {% block modal-header %}{% trans "Edit Certificate" %}{% endblock %}
 
@@ -21,5 +21,5 @@
 
 {% block modal-footer %}
   <input class="btn btn-primary pull-right" type="submit" value="{% trans "Save Changes" %}" />
-  <a href="{% url 'horizon:project:a10networks:index' %}" class="btn btn-default secondary cancel close">{% trans "Cancel" %}</a>
+  <a href="{% url 'horizon:project:index' %}" class="btn btn-default secondary cancel close">{% trans "Cancel" %}</a>
 {% endblock %}
