--- a/a10_horizon/dashboard/a10networks/a10appliances/templates/details_tabs.html
+++ b/a10_horizon/dashboard/a10networks/a10appliances/templates/details_tabs.html
@@ -1,9 +1,22 @@
 {% extends 'base.html' %}
 {% load i18n %}
+{% load staticfiles %}
+
 {% block title %}{% trans "Load Balancer" %}{% endblock %}
+{% block page_header %}
+<!--   <div style="display: inline;">
+  <h1 style="display:inline;">A10 Load Balancing Appliances</h1>
+  <img style="display:inline;" src="{% static 'logo.png' %}" alt="A10Logo"/>
+  <div>A10 Load Balancing Appliances</div>
+  <h1 style="display:inline;">A10 Load Balancing Appliances</h1>
+  </div> -->
+{% endblock %}
 
 {% block main %}
 <div class="row">
+
+
+
   <div class="col-sm-12">
   {{ tab_group.render }}
   </div>
