--- a/a10_horizon/dashboard/a10networks/a10appliances/templates/logo.html
+++ b/a10_horizon/dashboard/a10networks/a10appliances/templates/logo.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}
 <div class="row" style="display:inline; padding-right=128px; vertical-align:middle;">
-    <img style="margin-left: 32px" src="{% static 'logo.png' %}" alt="A10Logo"/>
+    <img style="margin-left: 32px" src="{% static 'a10networks/logo.png' %}" alt="A10Logo"/>
     <h1 style="display:inline;vertical-align:middle;">{{ logotitle }}</h1>
 </div>
