--- a/a10_horizon/dashboard/a10networks/a10scaling/templates/action/create.html
+++ b/a10_horizon/dashboard/a10networks/a10scaling/templates/action/create.html
@@ -3,5 +3,5 @@
 {% block title %}{% trans "Create Scaling Action" %}{% endblock %}
 
 {% block main %}
-  {% include 'policy/action/_update.html' %}
+  {% include 'action/_update.html' %}
 {% endblock %}
