--- a/a10_horizon/dashboard/a10networks/a10scaling/templates/alarm/create.html
+++ b/a10_horizon/dashboard/a10networks/a10scaling/templates/alarm/create.html
@@ -3,5 +3,5 @@
 {% block title %}{% trans "Create Scaling Alarm" %}{% endblock %}
 
 {% block main %}
-  {% include 'policy/alarm/_update.html' %}
+  {% include 'alarm/_update.html' %}
 {% endblock %}
