--- a/a10_horizon/dashboard/a10networks/a10scaling/templates/reaction/create.html
+++ b/a10_horizon/dashboard/a10networks/a10scaling/templates/reaction/create.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}{% trans "Update Router" %}{% endblock %}
+{% block title %}{% trans "Update Scaling Reaction" %}{% endblock %}
 
 {% block main %}
   {% include '_update.html' %}
