--- a/a10_horizon/dashboard/a10networks/a10scaling/templates/reaction/update.html
+++ b/a10_horizon/dashboard/a10networks/a10scaling/templates/reaction/update.html
@@ -3,5 +3,5 @@
 {% block title %}{% trans "Update Scaling Policy" %}{% endblock %}
 
 {% block main %}
-  {% include 'policy/_update.html' %}
+  {% include '_update.html' %}
 {% endblock %}
