--- a/a10_horizon/dashboard/a10networks/a10scaling/templates/detail.html
+++ b/a10_horizon/dashboard/a10networks/a10scaling/templates/detail.html
@@ -5,7 +5,7 @@
 {% block main %}
 <div class="row">
   <div class="col-sm-12">
-    {% include "policy/_detail_overview.html" %}
+    {% include "_detail_overview.html" %}
     <hr />
     <h3>
         Scaling Policy Reactions
