--- a/a10_horizon/dashboard/a10networks/a10appliances/templates/appliances_tabs.html
+++ b/a10_horizon/dashboard/a10networks/a10appliances/templates/appliances_tabs.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% load i18n %}
 {% load staticfiles %}
-{% block title %}{% trans "A10 Load Balancer Appliances" %}{% endblock %}
+{% block title %}{% trans "A10 Load Balancer Device Instances" %}{% endblock %}
 
 {% block main %}
-{% include "logo.html" with logotitle="Load Balancer Appliances" %}
+{% include "logo.html" with logotitle="Load Balancer Device Instances" %}
 <div class="row">
 
   <div class="col-sm-12">
