--- a/a10_horizon/dashboard/a10networks/templates/overview/overview_tabs.html
+++ b/a10_horizon/dashboard/a10networks/templates/overview/overview_tabs.html
@@ -1,12 +1,10 @@
 {% extends 'base.html' %}
 {% load i18n %}
 {% load staticfiles %}
-
-{% block title %}{% trans "A10 Load Balancing Device Instances"  %}{% endblock %}
+{% block title %}A10 Scalable Load Balancing Overview{% endblock %}
 
 {% block main %}
-{% include "logo.html" with logotitle="Scalable Load Balancing"%}
-
+{% include "logo.html" with logotitle="SLB Overview"%}
 <div class="row">
 
   <div class="col-sm-12">
