Fixed frustrating cache issue

--- a/a10_horizon/dashboard/a10networks/templates/analytics/analytics_tabs.html
+++ b/a10_horizon/dashboard/a10networks/templates/analytics/analytics_tabs.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 {% load i18n %}
+{% load breadcrumb_nav %}
 
 {% block title %}
   {{ page_title }}
 {% endblock %}
-{% load breadcrumb_nav %}
+
 {% block page_header %}
   <div class='page-header'>
     {% breadcrumb_nav %}
@@ -12,7 +13,7 @@
 {% endblock %}
 
 {% block main %}
-  {% include "logo.html" with logotitle="A10 Networks SLB Overview"%}
+  {% include "logo.html" with logotitle="Analytics"%}
   <div class="row">
     <div class="col-sm-12">
       {{ tab_group.render }}
