--- a/a10_horizon/dashboard/a10networks/templates/instances/migrate_device.html
+++ b/a10_horizon/dashboard/a10networks/templates/instances/migrate_device.html
@@ -7,5 +7,5 @@
 {% endblock page_header %}
 
 {% block main %}
-    {% include 'instances/_migrate_device.html' %}
+    {% include "instances/_migrate_device.html" %}
 {% endblock %}
