--- a/a10_horizon/dashboard/admin/a10networks/templates/migrate_device.html
+++ b/a10_horizon/dashboard/admin/a10networks/templates/migrate_device.html
@@ -7,5 +7,5 @@
 {% endblock page_header %}
 
 {% block main %}
-    {% include 'a10networks/instances/_migrate_device.html' %}
+    {% include '_migrate_device.html' %}
 {% endblock %}
